--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,10 +5,15 @@ bind-key C-a send-prefix
 
 # Resize the current pane using Alt + direction
 unbind l
-bind k resize-pane -U 10
-bind j resize-pane -D 10
-bind h resize-pane -L 20
-bind l resize-pane -R 20
+bind K resize-pane -U 10
+bind J resize-pane -D 10
+bind H resize-pane -L 20
+bind L resize-pane -R 20
+
+bind k select-pane -U
+bind j select-pane -D
+bind h select-pane -L
+bind l select-pane -R
 
 # split panes using | and -
 bind | split-window -h
@@ -27,3 +32,4 @@ set -g mouse on
 
 # don't rename windows automatically
 set-option -g allow-rename off
+
