--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # I hate defaults it is so long between each other
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+#unbind C-b
+#set-option -g prefix C-a
+#bind-key C-a send-prefix
 
 # Resize the current pane using Alt + direction
 unbind l
