--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -58,7 +58,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background, but no title bar buttons
-  decorations: none
+  decorations: full
 
   # Startup Mode (changes require restart)
   #
@@ -69,7 +69,7 @@ window:
   #
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
-  startup_mode: Fullscreen
+  #startup_mode: Fullscreen
 
   # Window title
   # title: Alacritty
@@ -147,7 +147,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 16.0
+  size: 11.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -375,13 +375,9 @@ colors:
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
 shell:
-   program: /usr/local/bin/tmux 
-   args:
-     - new-session
-     - -A
-     - -s
-     - main
-
+   program: /usr/bin/tmux
+   # args:
+   
 # Startup directory
 #
 # Directory the shell is started in. If this is unset, or `None`, the working
@@ -401,7 +397,7 @@ shell:
 # Send ESC (\x1b) before characters when alt is pressed.
 #alt_send_esc: true
 
-#mouse:
+mouse:
   # Click settings
   #
   # The `double_click` and `triple_click` settings control the time
@@ -411,7 +407,7 @@ shell:
   #triple_click: { threshold: 300 }
 
   # If this is `true`, the cursor is temporarily hidden when typing.
-  #hide_when_typing: false
+  hide_when_typing: false
 
   #url:
     # URL launcher
