cleanup and add print

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,7 +1,7 @@
 {
 	"languageserver": {
 		"ccls": {
-			"command": "/snap/bin/ccls",
+			"command": "ccls",
 			"filetypes": [
 				"c",
 				"cc",
