--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -8,6 +8,7 @@
 
 general {
         colors = true
+        output_format = "i3bar"
         interval = 1
         color_good = "#2AA198"
         color_bad = "#586E75"
