--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -10,9 +10,9 @@ general {
         colors = true
         output_format = "i3bar"
         interval = 1
-        color_good = "#2AA198"
-        color_bad = "#586E75"
-        color_degraded = "#DC322F"
+        color_good = "#b8bb26"
+        color_bad = "#fb4934"
+        color_degraded = "#fabd2f"
 }
 
 # order += "ipv6"
