--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -11,14 +11,14 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+env:
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  #TERM: alacritty
+  TERM: xterm-256color
 
 window:
   # Window dimensions (changes require restart)
@@ -174,13 +174,13 @@ font:
 
 # Base16 Gruvbox dark, hard 256 - alacritty color config
 # Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
-colors:
+# colors:
   # Default colors
-  primary:
+  # primary:
     # hard contrast: background = '0x1d2021'
-    background: '0x282828'
+    # background: '0x282828'
     # soft contrast: background = '0x32302f'
-    foreground: '0xebdbb2'
+    # foreground: '0xebdbb2'
     # Bright and dim foreground colors
     #
     # The dimmed foreground color is calculated automatically if it is not present.
@@ -195,9 +195,9 @@ colors:
   #
   # Allowed values are CellForeground and CellBackground, which reference the
   # affected cell, or hexadecimal colors like #ff00ff.
-  cursor:
-    text: '#1d2021'
-    cursor: '#d5c4a1'
+  # cursor:
+  #  text: '#1d2021'
+  #  cursor: '#d5c4a1'
 
   # Vi mode cursor colors
   #
@@ -220,26 +220,25 @@ colors:
   #  background: CellForeground
 
   # Normal colors
-  normal:
-    black:   '0x282828'
-    red:     '0xcc241d'
-    green:   '0x98971a'
-    yellow:  '0xd79921'
-    blue:    '0x458588'
-    magenta: '0xb16286'
-    cyan:    '0x689d6a'
-    white:   '0xa89984'
+  #normal: black:   '0x282828'
+  #  red:     '0xcc241d'
+  #  green:   '0x98971a'
+  #  yellow:  '0xd79921'
+  #  blue:    '0x458588'
+  #  magenta: '0xb16286'
+  #  cyan:    '0x689d6a'
+  #  white:   '0xa89984'
 
-  # Bright colors
-  bright:
-    black:   '0x928374'
-    red:     '0xfb4934'
-    green:   '0xb8bb26'
-    yellow:  '0xfabd2f'
-    blue:    '0x83a598'
-    magenta: '0xd3869b'
-    cyan:    '0x8ec07c'
-    white:   '0xebdbb2'
+  ## Bright colors
+  #bright:
+  #  black:   '0x928374'
+  #  red:     '0xfb4934'
+  #  green:   '0xb8bb26'
+  #  yellow:  '0xfabd2f'
+  #  blue:    '0x83a598'
+  #  magenta: '0xd3869b'
+  #  cyan:    '0x8ec07c'
+  #  white:   '0xebdbb2'
 
   # Dim colors
   #
@@ -263,13 +262,13 @@ colors:
   # Example:
   #   `- { index: 16, color: '#ff00ff' }`
   #
-  indexed_colors:
-    - { index: 16, color: '#fe8019' }
-    - { index: 17, color: '#d65d0e' }
-    - { index: 18, color: '#3c3836' }
-    - { index: 19, color: '#504945' }
-    - { index: 20, color: '#bdae93' }
-    - { index: 21, color: '#ebdbb2' }
+  # indexed_colors:
+  #   - { index: 16, color: '#fe8019' }
+  #   - { index: 17, color: '#d65d0e' }
+  #   - { index: 18, color: '#3c3836' }
+  #   - { index: 19, color: '#504945' }
+  #   - { index: 20, color: '#bdae93' }
+  #   - { index: 21, color: '#ebdbb2' }
 
 # Bell
 #
