--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -21,7 +21,7 @@ order += "disk /"
 # order += "disk /home"
 order += "wireless _first_"
 order += "ethernet _first_"
-# order += "battery all"
+order += "battery all"
 # order += "load"
 order += "memory"
 order += "tztime local"
@@ -52,8 +52,8 @@ wireless _first_ {
 }
 
 battery all {
-        # format = "%status %percentage %remaining %emptytime"
-        format = " %status %percentage"
+        format = "%status %percentage %remaining"
+        #format = " %status %percentage"
         format_down = "No battery"
         last_full_capacity = true
         integer_battery_capacity = true
