--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -684,16 +684,7 @@ key_bindings:
   #- { key: N,      mods: Shift,         mode: Vi, action: SearchPrevious          }
 
   # (Windows, Linux, and BSD only)
-  - { key: V,        mods: Alt, action: Paste                            }
-  - { key: C,        mods: Alt, action: Copy                             }
-  #- { key: F,              mods: Control|Shift,           action: SearchForward    }
-  #- { key: B,              mods: Control|Shift,           action: SearchBackward   }
-  #- { key: C,        mods: Control|Shift, mode: Vi, action: ClearSelection   }
-  #- { key: Insert,   mods: Shift,         action: PasteSelection   }
-  #- { key: Key0,     mods: Control,       action: ResetFontSize    }
-  #- { key: Equals,   mods: Control,       action: IncreaseFontSize }
-  #- { key: Plus,           mods: Control,                 action: IncreaseFontSize }
-  #- { key: NumpadAdd,      mods: Control,                 action: IncreaseFontSize }
-  #- { key: Minus,    mods: Control,       action: DecreaseFontSize }
-  #- { key: NumpadSubtract, mods: Control,                 action: DecreaseFontSize }
-
+  - { key: V,        mods: Alt,     action: Paste                            }
+  - { key: C,        mods: Alt,     action: Copy                             }
+    #  - { key: K,        mods: Control, chars: "\x1b[A"                          }
+    #  - { key: J,        mods: Control, chars: "\x1b[B"                          }
