--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,22 @@
 {
     "languageserver": {
+        "haskell": {
+            "command": "haskell-language-server-wrapper",
+            "args": [
+                "--lsp"
+            ],
+            "rootPatterns": [
+                "*.cabal",
+                "stack.yaml",
+                "cabal.project",
+                "package.yaml",
+                "hie.yaml"
+            ],
+            "filetypes": [
+                "haskell",
+                "lhaskell"
+            ]
+        },
         "ccls": {
             "command": "ccls",
             "filetypes": [
