--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,20 @@
 {
     "languageserver": {
+        "elmLS": {
+            "command": "elm-language-server",
+            "filetypes": [
+                "elm"
+            ],
+            "rootPatterns": [
+                "elm.json"
+            ],
+            "initializationOptions": {
+                "elmPath": "elm",
+                "elmFormatPath": "elm-format",
+                "elmTestPath": "elm-test",
+                "elmAnalyseTrigger": "change"
+            }
+        },
         "haskell": {
             "command": "haskell-language-server-wrapper",
             "args": [
